Sun Aug  6 23:04:59 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Moved obj->visible into state mask.
	* Backend of resizing code in place. Objects aren't actually
	resized yet, but drag a selection rect and see the printfs! ;)

Sun Aug  6 19:20:08 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* g_malloc and libc free don't mix :-) This fixes the core dump on
	opening the file selector after deleting an object.
	* Fixed bug with object freeing itself twice :)

Sun Aug  6 02:09:48 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Added rectangle objects. They look kewl ;-)
	* Fixed rendering bug not visible for images, but shown for
	rects.
	* Added rectangles to the demo :)

Sat Aug  5 21:03:34 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Colour and transparency for text.

Sat Aug  5 20:49:18 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Moved the checking of pixel transparency to a member function of
	geist_object, so that different objects can determine their
	transparency differently.

Sat Aug  5 19:15:08 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Copy works, and handles multiple selections too.
	* Fixed coredump when typing stuff in the text boxes ;) (My bad).
	* Fixed some other stuffs... Urm...

Sat Aug  5 16:37:37 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Check if object is visible when seeing if it's been clicked.
	* Check a layer is visible before checking selections on its
	objects.
	* Made the object list an extended selection mode list.
	* Wired in multiple selections into the object list.
	* The editing of name/text is disabled for multiple selections
	right now, but it's easy to wire it up to modify multiple objects
	at once.
	* Delete works for multiple objects. But there cores when you
	delete the last one. I have to fix this next.
	* I'll do copy next too.

Sat Aug  5 12:59:35 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Fixed text update, removed duplicate call to