@@ -50,7 +50,7 @@
 #endif
 
 #ifndef VERSION
-#define VERSION 0.0.1
+#define VERSION "0.0.1"
 #endif
    
 extern int call_level;
