@@ -13,6 +13,7 @@ struct __geist_image {
    int h;
    Imlib_Image im;
    int alias;
+   int sizemode;
 };
 
 geist_object *geist_image_new(void);
